--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>Quotes</title>
-  <link href="https://fonts.googleapis.com/css?family=Erica+One|Kreon:400,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Erica+One|Palanquin:500,700" rel="stylesheet">
 </head>
 
 <body>
