Replace Palanquin by Proxima Nova

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico?v=1">
   <title>Quotes</title>
   <meta name="description" content="The most beautiful poetry of all." />
-  <link href="https://fonts.googleapis.com/css?family=Erica+One|Palanquin:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Erica+One" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.typekit.net/tre3gmk.css">
 </head>
 
 <body>
